@@ -1,8 +1,7 @@
 module Apotomo
   # Shortcut methods for creating widget trees.
   module WidgetShortcuts
-    # Shortcut for creating an instance of <tt>class_name+"_widget"</tt> named +id+.
-    # If +start_state+ is omited, :display is default. Yields self.
+    # Shortcut for creating an instance of <tt>class_name+"_widget"</tt> named +id+. Yields self.
     #
     # Example:
     # 
@@ -12,15 +11,7 @@ module Apotomo
     #
     #   widget(:comments, 'post-comments', :user => current_user)
     #
-    # sets the start state to <tt>:display</tt>, id to 'posts_comments' and #options to the hash.
-    #
-    #   widget(:comments, 'post-comments', :reload)
-    #
-    # start state will be <tt>:reload</tt>.
-    #
-    #   widget(:comments, 'post-comments', :reload, :user => @current_user)
-    #
-    # The verbose way.
+    # sets id to 'posts_comments' and #options to the hash.
     #
     # You can also use namespaces.
     #
@@ -28,9 +19,8 @@ module Apotomo
     def widget(prefix, *args)
       options = args.extract_options!
       id      = args.shift || prefix
-      state   = args.shift || :display
       
-      constant_for(prefix).new(parent_controller, id, state, options).tap do |object|
+      constant_for(prefix).new(parent_controller, id, options).tap do |object|
         yield object if block_given?  
       end
     end
