@@ -7,6 +7,7 @@ h3. Changes
   * Including Apotomo::Rails::ControllerMethods by hand is optional. The first call to Controller.has_widgets will include the real module.
   * You can now @#render_widget@ in your widget views to render children.
   * @#widget@ now accepts one arg only (the widget prefix). @widget(:comments)@ sets id to @:comments@.
+  * #invoke now requires a state name.
   * The event is no longer added to #options at triggering time.
   * Options passed in #render_widget are no longer merged with #options. They are passed as state-args to reduce complexity.
   * We no longer have @opts and @params but #options and #params from Cell::Base.
@@ -16,7 +17,7 @@ h3. Changes
 h3. Removals
   * Removed #param, it is simply too complex.
   * Removed render :render_children and :invoke options. Use #render_widget in your state/view.
-  * Removed #jump_to_state.
+  * Removed #jump_to_state and #last_state.
   * Removed `@cell`, now longer available in state views.
   * Removed #cell, #container and #section widget shortcuts.
   * Removed @rendered_children@ local in views. Use #render_widget.
